# raytracer-in-a-weekend

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  justfile  netlify.toml
.cargo/: config.toml
.claude/: settings.local.json
.scratch/: HANDOFF.md
.scratch/bvh-perf/: PRD-node-compaction.md  PRD.md  RESEARCH.md
.scratch/env-map-mis/: PRD.md
.scratch/object-material-ownership/: PRD.md
.scratch/pbr-materials/: PLAN.md
.scratch/scene-worldbuilder-split/: PRD.md  SEED.md
.scratch/shadow-rays/: PRD.md  SEED.md
.scratch/ui-audit/: README.md
.scratch/world-top-bvh/: PRD.md  SEED.md
assets/scenes/: cornell-box-2.scene  cornell-box.scene  glass-block.scene  sculpture.scene  teapot.scene
benches/: bvh.rs
docs/adr/: 0001-scene-binary-format.md  0002-procedural-textures-are-world-space.md
docs/agents/: domain.md  triage-labels.md
examples/: bvh_stats.rs  scene_inspect.rs  scene_slim.rs
src/: bench_support.rs  color.rs  group.rs  interval.rs  lib.rs  main.rs  platform.rs  render.rs  sampling.rs  scene.rs  scene_file.rs  vec3.rs  world.rs
src/camera/: camera.rs  config.rs  mod.rs
src/geometry/: make_box.rs  material_override.rs  mod.rs  obj_loader.rs  quad.rs  render_mesh.rs  sphere.rs  transform.rs  triangle.rs
src/integrator/: common.rs  mis.rs  mod.rs  naive.rs  sky.rs
src/material/: blank.rs  dielectric.rs  diffuse_light.rs  glossy.rs  lambertian.rs  material.rs  metal.rs  microfacet.rs  mod.rs
src/ray/: area_light.rs  hit_record.rs  intersect.rs  mod.rs  ray.rs
src/scene/: build.rs  edit.rs  material.rs  mod.rs  object.rs  shape.rs  texture.rs
src/scenes/: bouncing_spheres.rs  cornell_box.rs  earth.rs  mod.rs  new_bvh.rs  obj.rs  perlin_spheres.rs  quads.rs  simple_light.rs  tris.rs
src/texture/: checker_texture.rs  env_map.rs  image_loader.rs  image_texture.rs  mapped_texture.rs  mod.rs  noise_texture.rs  perlin.rs  solid_color.rs  texture.rs
src/viewer/: command.rs  controls.rs  history.rs  icons.rs  mod.rs  orbit.rs  render_task.rs  samples.rs  state.rs  texture_library.rs  theme.rs  view_transform.rs
teach/: MISSION.md  NOTES.md  RESOURCES.md
teach/assets/: lesson.css  quiz.js
teach/learning-records/: 0001-envmap-grid-mental-model.md  0002-inverse-transform-sampling.md  0003-the-jacobian.md
teach/lessons/: 0001-texels-rows-and-the-envmap-grid.html  0002-sampling-from-a-pdf-inversion.html  0003-the-jacobian-stretch-factor.html
teach/reference/: glossary.html
tests/: render_characterization.rs
tools/: decimate.py
(+54 files in other folders)
