[package]
name = "raytracer-in-a-weekend"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "*", features = ["rayon"] }
rayon = "*"
indicatif = "0.18.0"
rand = { version = "0.9.1", features = ["small_rng"] }
typed-builder = "0.21.0"
palette = "0.7.6"
rand_distr = "0.5.1"
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "accesskit", "x11", "wayland"] }
glam = { version = "0.29", features = ["mint"] }
rfd = "0.17.2"
bytemuck = "1"
glow = "0.17"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# debug = true
