[package]
name = "raytracer-in-a-weekend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "*", features = ["rayon"] }
rayon = "*"
rand = { version = "0.9.1", features = ["small_rng"] }
typed-builder = "0.21.0"
palette = "0.7.6"
rand_distr = "0.5.1"
glam = { version = "0.29", features = ["mint"] }
bytemuck = "1"
glow = "0.17"
transform-gizmo-egui = "0.9"
web-time = "1.1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
indicatif = "0.18.0"
rfd = "0.17.2"
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "accesskit", "x11", "wayland"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "accesskit"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Window", "Navigator", "Document", "HtmlCanvasElement", "HtmlAnchorElement", "Blob", "BlobPropertyBag", "Url"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# debug = true
